# cloaked-octo-gb-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cartridge.cpp  cartridge.h  core.cpp  core.h  main.cpp
testRoms/: README
